# blackchirp

./: .gitignore  .readthedocs.yaml  52-serial.rules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  README  README.md  acquisition.pri  acquisitionmanager.cpp  acquisitionmanager.h  ad9914.cpp  ad9914.h  analysis.cpp  analysis.h  awg.cpp  awg.h  awg70002a.cpp  awg70002a.h  awg7122b.cpp  awg7122b.h  backtrace.txt  batchmanager.cpp  batchmanager.h  batchsequence.cpp  batchsequence.h  batchsequencedialog.cpp  batchsingle.cpp  batchsingle.h  blackchirp-tests.pro  blackchirp-viewer.pro  blackchirp.pro  changelog.md  chirpconfig.cpp  chirpconfig.h  chirpconfigplot.cpp  chirpconfigplot.h  (+301 more)
python/blackchirp/: LICENSE  README.md  pyproject.toml
python/blackchirp/tests/: conftest.py  test_coaverage.py  test_differential_fid.py  test_enum_helpers.py  test_error_paths.py  test_ft_units.py  test_ftmw_axis_units.py  test_lif_missing_point.py  test_lif_no_ref.py  test_lif_proc_overrides.py  test_lif_scan.py  test_lif_trace.py  test_lif_v1_absent.py  test_load_v1.py  test_load_v2.py  test_processing_overrides.py  test_sideband_dispatch.py  test_window_dispatch.py  test_window_functions.py
src/: AGENTS.md  CMakeLists.txt  main.cpp
src/acquisition/: acquisition.pri  acquisitionmanager.cpp  acquisitionmanager.h  savemanager.cpp  savemanager.h
src/acquisition/batch/: batchmanager.cpp  batchmanager.h  batchsequence.cpp  batchsequence.h  batchsingle.cpp  batchsingle.h
src/config/: config.pri.template
src/data/: bcglobals.cpp  bcglobals.h  crashhandler.cpp  crashhandler.h  crashhandler_p.h  crashhandler_unix.cpp  crashhandler_win.cpp  data.pri  datastructs.cpp  datastructs.h  loghandler.cpp  loghandler.h  updatechecker.cpp  updatechecker.h
src/data/analysis/: analysis.cpp  analysis.h  ft.cpp  ft.h  ftworker.cpp  ftworker.h  peakfinder.cpp  peakfinder.h  peakfindsettings.h  snapworker.cpp  snapworker.h  waveformparser.cpp  waveformparser.h
src/data/experiment/: auxdatakeys.h  catalogdata.cpp  catalogdata.h  catalogparser.cpp  catalogparser.h  catalogparserregistry.cpp  catalogparserregistry.h  chirpconfig.cpp  chirpconfig.h  digitizerconfig.cpp  digitizerconfig.h  experiment.cpp  experiment.h  experimentobjective.cpp  experimentobjective.h  experimentvalidator.cpp  experimentvalidator.h  fid.cpp  fid.h  fileparser.h  flowconfig.cpp  flowconfig.h  ftmwconfig.cpp  ftmwconfig.h  ftmwconfigtypes.cpp  ftmwconfigtypes.h  ftmwdigitizerconfig.cpp  ftmwdigitizerconfig.h  genericxydata.h  genericxyparser.cpp  genericxyparser.h  hardwaredatacontainer.cpp  hardwaredatacontainer.h  ioboardconfig.cpp  ioboardconfig.h  overlay.cpp  overlay.h  overlaybase.cpp  overlaybase.h  overlaytypes.cpp  (+10 more)
src/data/lif/: lifconfig.cpp  lifconfig.h  lifdigitizerconfig.cpp  lifdigitizerconfig.h  lifstorage.cpp  lifstorage.h  liftrace.cpp  liftrace.h
src/data/loadout/: chirpconfigloadout.cpp  chirpconfigloadout.h  ftmwdigitizerloadout.cpp  ftmwdigitizerloadout.h  hardwareloadout.cpp  hardwareloadout.h  loadoutmanager.cpp  loadoutmanager.h  rfconfigsnapshot.cpp  rfconfigsnapshot.h
src/data/model/: chirptablemodel.cpp  chirptablemodel.h  clocktablemodel.cpp  clocktablemodel.h  exptsummarymodel.cpp  exptsummarymodel.h  hwsettingsmodel.cpp  hwsettingsmodel.h  ioboardconfigmodel.cpp  ioboardconfigmodel.h  markertablemodel.cpp  markertablemodel.h  overlaytablemodel.cpp  overlaytablemodel.h  peaklistfilterproxymodel.cpp  peaklistfilterproxymodel.h  peaklistmodel.cpp  peaklistmodel.h  validationmodel.cpp  validationmodel.h
src/data/presentation/: curveappearance.cpp  curveappearance.h
src/data/processing/: overlayoperation.cpp  overlayoperation.h  overlayprocessmanager.cpp  overlayprocessmanager.h
src/data/settings/: guikeys.h  hardwarekeys.h
src/data/storage/: applicationconfigmanager.cpp  applicationconfigmanager.h  auxdatastorage.cpp  auxdatastorage.h  blackchirpcsv.cpp  blackchirpcsv.h  datastoragebase.cpp  datastoragebase.h  enumcsvconvert.h  fidmultistorage.cpp  fidmultistorage.h  fidpeakupstorage.cpp  fidpeakupstorage.h  fidsinglestorage.cpp  fidsinglestorage.h  fidstoragebase.cpp  fidstoragebase.h  headerstorage.cpp  headerstorage.h  overlaystorage.cpp  overlaystorage.h  settingsstorage.cpp  settingsstorage.h  waveformbuffer.cpp  waveformbuffer.h
src/gui/: gui.pri  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_ui.h
src/gui/dialog/: aboutdialog.cpp  aboutdialog.h  addprofiledialog.cpp  addprofiledialog.h  applicationconfigdialog.cpp  applicationconfigdialog.h  batchsequencedialog.cpp  batchsequencedialog.h  batchsequencedialog.ui  bcsavepathdialog.cpp  bcsavepathdialog.h  communicationdialog.cpp  communicationdialog.h  communicationdialog.ui  crashreportdialog.cpp  crashreportdialog.h  experimentchooserdialog.cpp  experimentchooserdialog.h  exportbatchdialog.cpp  ftmwconfigdialog.cpp  ftmwconfigdialog.h  ftmwconfigdialog_ui.h  hwarrayeditdialog.cpp  hwarrayeditdialog.h  hwdialog.cpp  hwdialog.h  ioboardconfigdialog.cpp  ioboardconfigdialog.h  ioboardconfigdialog.ui  peaklistexportdialog.cpp  peaklistexportdialog.h  peaklistexportdialog.ui  quickexptdialog.cpp  quickexptdialog.h  quickexptdialog.ui  runtimehardwareconfigdialog.cpp  runtimehardwareconfigdialog.h  runtimehardwareconfigdialog_ui.h  updateavailabledialog.cpp  updateavailabledialog.h
src/gui/expsetup/: drscanconfigwidget.cpp  drscanconfigwidget.h  experimentchirpconfigpage.cpp  experimentchirpconfigpage.h  experimentconfigpage.cpp  experimentconfigpage.h  experimentdrscanconfigpage.cpp  experimentdrscanconfigpage.h  experimentflowconfigpage.cpp  experimentflowconfigpage.h  experimentftmwconfigpage.cpp  experimentftmwconfigpage.h  experimentftmwdigitizerconfigpage.cpp  experimentftmwdigitizerconfigpage.h  experimentioboardconfigpage.cpp  experimentioboardconfigpage.h  experimentloscanconfigpage.cpp  experimentloscanconfigpage.h  experimentpressurecontrollerconfigpage.cpp  experimentpressurecontrollerconfigpage.h  (+16 more)
src/hardware/: hardware.pri  opthw_h.h
src/resources/: resources.qrc  virtualdata.qrc
(+1087 files in other folders)
